# MyBookshelf

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: crud.py  main.py  models.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
grafana/: config.alloy  mimir.yaml  tempo.yaml
grafana/provisioning/datasources/: datasources.yaml
src/: api.py  fake_entries.py  main.py
src/database/: connection.py  db.py  models.py
src/endpoints/: health.py
src/endpoints/author/: add_author.py  delete_author.py  get_all_authors.py  get_author.py  response.py  router.py  update_author.py
src/endpoints/book/: add_book.py  delete_book.py  get_all_books.py  get_book.py  response.py  router.py  update_book.py
src/endpoints/genre/: add_genre.py  delete_genre.py  get_all_genres.py  get_genre.py  response.py  router.py  update_genre.py
src/models/: __init__.py  book.py  book_genre_link.py  genre.py  status.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/repositories/: authors_repo.py  books_repo.py  genres_repo.py  statuses_repo.py
src/schemas/: __init__.py  author.py  author_schemas.py  base.py  book.py  book_genre_link.py  book_schemas.py  db.py  genre.py  genre_schemas.py  status.py  status_schemas.py
src/services/: authors_service.py  books_service.py  genres_service.py  statuses_service.py
src/utils/: connection.py  db.py  fake_entries.py
tests/: test_bookshelf.py
(+37 files in other folders)
